--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/related-tags.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/related-tags.less
@@ -2,3 +2,15 @@
   margin-left: 0;
   margin-top: 3.125rem;
 }
+
+@media (min-width: 1024px) {
+  .related-tags {
+    margin-inline: 1.25rem;
+  }
+
+  .gu-custom-container.DISABLEDMODE {
+    .related-tags {
+      min-height: 77px;
+    }
+  }
+}
